<resources>
    <string name="app_name">Vocabulary trainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vocabulary trainer</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string> <!-- This was for the old overflow menu -->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_lessons">Lessons</string>
    <string name="menu_user_statistics">User Statistics</string>
    <string name="menu_lesson_creator">Lesson Creator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="app_version">Version 0.1</string>
</resources>