<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_lessons" />
        <item
            android:id="@+id/nav_user_statistics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_user_statistics" />
        <item
            android:id="@+id/nav_lesson_creator"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lesson_creator" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>